# fixtureio

./: .gitignore  README.html  README.md  app.R
data_load/: db_interact.py  evaluate_bets.py  guide.txt  pyproject.toml  set_n_odds.py  test_script.py  update_odds_weekly.py  update_odds_weekly_cleaned.py  upload_bunch_historical.py
data_load_old/: db_interact.py  pyproject.toml  utils.py
script_folder/functions_server/: functions.R
script_folder/modules/: mod_authors.R  mod_card_for_match_details.R  mod_estimation_info_2.R  mod_home_page.R  mod_how_it_works.R  mod_log_in_or_create.R  mod_match_data_row.R  mod_methodology.R  mod_navigation_buttons.R  mod_selection_screen.R  mod_stat_numeric_4.R  mod_the_data.R  mod_user_page.R
script_folder/modules/old/: CopyOfmod_stat_numeric_4.R  mod_estimation_info.R  mod_estimation_info_old_1.R  mod_estimation_stats_defence.R  mod_estimation_stats_offence.R  mod_estimation_stats_overall.R  mod_selection_popup.R  mod_stat_numeric.R  mod_stat_numeric_2.R  mod_stat_numeric_3.R
www/: CopyOfcustom.js  custom.js  customtwo.js  privacy-policy.html  styles2.css  terms-and-conditions.html
