[tool.poetry]
name = "data-load"
version = "0.1.0"
description = "Load data for the app"
authors = ["Rasmus Kaasen <kaasen1995@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
